--- a/index.html
+++ b/index.html
@@ -8,10 +8,31 @@
     <title>Super Wars</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    
-    <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
-</body>
+    <div class="container">
+        <div class = "players">
+        <div id="div1"><img src="images/super-10.png" alt="Doctor-Strange">
+            <p id="hero"> Doctor-Strange</p>
+            <p id="points">15</p>
+        </div>
+        <div id="div2"><img src="images/super-1.png" alt="Spider-Man">
+            <p id="hero"> Spider<br>Man</p>
+            <p id="points">12</p></div>
+        </div>
+        <div id="div3">
+            <p id="point">10 - 0</p>
+        </div>
+        <div class="players">
+        <div id="div4"><img src="images/super-5.png" alt="Loki">
+            <p id="hero">Loki</p>
+            <p id="points">7</p>
+        </div>
+        <div id="div5"><img src="images/super-20.png" alt="Thanos">
+            <p id="hero"> Thanos</p>
+            <p id="points">10</p>
+        </div>
+        </div>
+    </div>
 
+</body>
 </html>
